implemented special and vacation timers

--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,23 @@
+@font-face {
+  font-family: 'D-Din-Condensed';
+  src: url('/fonts/d-dincondensed.woff2') format('woff2');
+  font-weight: 400;
+  font-style: condensed;
+}
+
+@font-face {
+   font-family: 'D-Din-Bold';
+  src: url('/fonts/d-dincondensed-bold.woff2') format('woff2');
+  font-weight: 800;
+  font-style: bold;
+}
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'D-Din-Condensed', Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  color: rgba(255, 255, 255, 1);
   background-color: #242424;
 
   font-synthesis: none;
