--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,6 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 1);
-  background-color: #242424;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -43,7 +42,13 @@ h2 {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
-    background-color: #ffffff;
+    color: rgb(53, 53, 53);
+    background-color: rgb(255, 255, 255);
+  }
+}
+@media (prefers-color-scheme: dark) {
+  :root {
+    color: rgba(255, 255, 255, 1);
+    background-color: rgb(53, 53, 53);
   }
 }
